Revision history for Mojolicious-Plugin-BootstrapHelpers

{{$NEXT}}
 [API Changes]

 [Bug Fixes]

 [Documentation]
 - Synopsis contained a partially deprecated example.

 [Enhancements]

 [Meta]

 [New Features]

 [Revision]

0.0170 2014-09-15T20:44:29Z CEST
 [Enhancements]
 - Added button group support (also supports nested groups)

0.0161 2014-09-14T21:23:07Z CEST
 [Meta]
 - Shorter version numbers

 [New Features]
 - Undocumented preliminary support for button groups.

0.0160 2014-09-13T15:59:45Z CEST
 [API Changes]
 - Improved the dropdown syntax. Now the arguments for the button goes in
   the 'button' array ref.

 [Enhancements]
 - Fixed spacing around caret.
 - Added disabled strapping to dropdown item.

0.015.001 2014-09-12T18:46:54Z CEST
 [API Changes]
 - Remove divier from dropdown definition. Replaced by empty array ref.

 [New Features]
 - Use a string in a dropdown to create a dropdown header.

0.015.000 2014-09-11T12:54:51Z CEST
 [Documentation]
 - Moved all examples to source files, meaning all examples are passed
   through tests to ensure that they are correct.
 - It also means that all tag helper tests are output as html files in the
   examples/ directory

 [Meta]
 - Remove DZP::CopyFromRelease
 - Add missing build dependencies

0.014.001 2014-09-08T14:55:39Z CEST
 - Removed the automatic insertion of _ after a customized prefix.
 - Converted tests to Dist::Zilla::Plugin::Test::CreateFromMojoTemplates
   style
 - Changed ordering in documentation to alphabetical
 - Removed trailing whitespace
 - Changed some dzil plugins (and version style)

0.014.000 2014-09-05T12:34:25Z CEST
 - Restored the accidentally removed cols support for form groups
 - Documentation: Minor typos fixed
 - Documentation: Removed unsupported input groups examples
 - There is no 0.013.

0.012 2014-09-04T22:58:34Z CEST
 - Added simple dropdown support
 - Added icon support
 - Fixed version number
 - Removed support for input group (was incorrect)